tests/snapshots/run_file__num_pred.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/num_pred.bend
---
NumScott:
42

Scott:
42
