tests/snapshots/run_file__open_object.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/open_object.bend
---
NumScott:
1

Scott:
1
