tests/snapshots/run_file__open_too_many_ctrs.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/open_too_many_ctrs.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/run_file/open_too_many_ctrs.bend[0m[1m :[0m
[1mIn definition '[4mmain[0m[1m':[0m
  Type 'MyTree' of an 'open' has more than one constructor
