tests/snapshots/run_file__ops.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/ops.bend
---
NumScott:
[1, 1, 1, 1, 1, 1, 1, 1]

Scott:
[1, 1, 1, 1, 1, 1, 1, 1]
