tests/snapshots/run_file__override_list_ctr.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/override_list_ctr.hvm
---
At tests/golden_tests/run_file/override_list_ctr.hvm:2:5: List.nil is a built-in constructor and should not be overridden.
[0m  2 |   = [4m[31mList.nil[0m
