tests/snapshots/run_file__override_str_ctr.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/override_str_ctr.bend
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/run_file/override_str_ctr.bend :
Redefinition of builtin (constructor) 'String/Cons'.
[0m  1 | [4m[31mString/Cons = *[0m
